--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week/timesheet-day-label/timesheet-day-label.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week/timesheet-day-label/timesheet-day-label.component.html
@@ -1,5 +1,5 @@
 <span class="mat-elevation-z2 pt-2" fxLayout="column" fxLayoutAlign="start center" matRipple 
-  [ngClass]="(date | isToday) ? 'accent' : 'foreground-card'"
+  [ngClass]="(date | isToday) ? 'accent' : 'foreground-card color-accent'"
   (click)="labelClicked.emit(date.getTime())">
 
     <div fxLayout="column" fxLayoutAlign="center center" *ngIf="date" >
