--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,37 +22,51 @@
     <ng-container *ifRole="RolePresets.Authority">
       <span class="mat-body-2">Administrering</span>
   
-      <app-list-card startIcon="date_range"
-        [routerLink]="['/timeadministrering']">
-        Administrer timer<mat-icon rightSide>chevron_right</mat-icon>
+      <app-list-card [routerLink]="['/timeadministrering']">
+        <mat-icon left-side>date_range</mat-icon>
+        Administrer timer
+        <mat-icon right-side>chevron_right</mat-icon>
       </app-list-card>
   
-      <app-list-card startIcon="dns"
-        [routerLink]="['/data']">
-        Administrer data<mat-icon rightSide>chevron_right</mat-icon>
+      <app-list-card [routerLink]="['/data']">
+        <mat-icon left-side>dns</mat-icon>
+        Administrer data
+        <mat-icon right-side>chevron_right</mat-icon>
       </app-list-card>
   
-      <app-list-card startIcon="people"
-        [routerLink]="['/brukere']">
-        Administrer brukere<mat-icon rightSide>chevron_right</mat-icon>
+      <app-list-card [routerLink]="['/brukere']">
+        <mat-icon left-side>people</mat-icon>
+        Administrer brukere
+        <mat-icon right-side>chevron_right</mat-icon>
       </app-list-card>
   
       <span class="mat-body-2">Statistikk</span>
   
-      <app-list-card startIcon="assessment"
-        [routerLink]="['/timestatistikk']">
-        Timestatistikk<mat-icon rightSide>chevron_right</mat-icon>
+      <app-list-card [routerLink]="['/timestatistikk']">
+        <mat-icon left-side>assessment</mat-icon>
+        Timestatistikk
+        <mat-icon right-side>chevron_right</mat-icon>
       </app-list-card>
     </ng-container>
-  
-    <span class="mat-body-2">Sist besøkte oppdrag</span>
 
-    <app-list-card *ngFor="let mission of missionHistory$ | async" 
-      startIcon="history"
-      [routerLink]="['/oppdrag', mission.id, 'detaljer']">
-      {{mission.address}}
-      <mat-icon rightSide>{{ mission.finished ? 'check':'chevron_right' }}</mat-icon>
-    </app-list-card>
+    <mat-card class="mt-2">
+
+        <span class="mat-body-2 mb-2"> Sist besøkte oppdrag</span>
+
+        <mat-divider inset="true"></mat-divider>
+
+        <app-list-item *ngFor="let mission of missionHistory$ | async" 
+          startIcon="history"
+          endIcon="chevron_right"
+          [routerLink]="['/oppdrag', mission.id, 'detaljer']">
+          <mat-icon left-side>history</mat-icon>
+          {{mission.address}}
+          <mat-icon right-side>chevron_right</mat-icon>
+        </app-list-item>
+
+    </mat-card>
+  
+
   
   </div>
 </app-home-top-nav>
