--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -59,7 +59,6 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
 }
 
 
-
 .foreground-card{
   background-color:mat-color($background, card);
 }
@@ -71,6 +70,13 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
 .line-height-100{line-height:100%}
 
 .flex-spacer{flex: 1 1 auto;} //unnused
+
+.overlay-page{
+  position:absolute;
+  top:0;
+  width:100%;
+  height:100%;
+}
 
 .max-width{max-width:600px!important;margin:auto}
 
