--- a/src/app/shared-app/components/list-item/list-item.component.html
+++ b/src/app/shared-app/components/list-item/list-item.component.html
@@ -1,12 +1,12 @@
 <span fxLayout="row" fxLayoutAlign="start center" class="pt-3 pb-3" matRipple> 
 
-    <ng-content select="[left-icon]"></ng-content>
+    <ng-content select="[left-side]"></ng-content>
 
     <span class="ml-1 mr-auto ellipsis">
         <ng-content></ng-content>
     </span>    
     
-    <ng-content select="[right-icon]"></ng-content>
+    <ng-content select="[right-side]"></ng-content>
 
       
 </span>
