add padding to list item component

--- a/src/app/shared-app/components/list-item/list-item.component.html
+++ b/src/app/shared-app/components/list-item/list-item.component.html
@@ -1,4 +1,4 @@
-<span fxLayout="row" fxLayoutAlign="start center" class="pt-3 pb-3" matRipple> 
+<span fxLayout="row" fxLayoutAlign="start center" class="p-2 pt-3 pb-3" matRipple> 
 
     <ng-content select="[left-side]"></ng-content>
 
@@ -7,6 +7,5 @@
     </span>    
     
     <ng-content select="[right-side]"></ng-content>
-
-      
+  
 </span>
