basic multiview for desktop views

--- a/src/app/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
+++ b/src/app/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton [fabs]="fabs" overlayMode="true">
+<app-main-skeleton [fabs]="fabs">
 
     <app-main-top-nav-bar navbar [config]="navConfig" >
     </app-main-top-nav-bar>
