--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton>
+<app-main-skeleton childDisplayMode="overlay">
 
     <app-main-top-nav-bar navbar [config]="navConfig">
     </app-main-top-nav-bar>
