--- a/src/app/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/src/app/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton disableElevation="true" overlayMode="true">
+<app-main-skeleton disableElevation="true" childDisplayMode="overlay">
 
   <app-main-top-nav-bar navbar [config]="navConfig$ | async" >
   </app-main-top-nav-bar>
