--- a/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,5 +1,5 @@
 
-<app-main-skeleton *ngIf="vm$ | async; let vm" overlayMode="true">
+<app-main-skeleton *ngIf="vm$ | async; let vm" childDisplayMode="overlay">
 
     <app-detail-top-nav-bar navbar [config]="vm.navConfig" >
     </app-detail-top-nav-bar>
