--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton overlayMode="true">
+<app-main-skeleton>
 
     <app-main-top-nav-bar navbar [config]="navConfig$ | async">
     </app-main-top-nav-bar>
