--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton *ngIf="navVm$ | async; let navVm" [fabs]="navVm.fabs" overlayMode="true">
+<app-main-skeleton *ngIf="navVm$ | async; let navVm" [fabs]="navVm.fabs">
 
     <ng-container navbar>
         <app-main-top-nav-bar [config]="navVm.navConfig" >
