--- a/src/styles/custom-theme.scss
+++ b/src/styles/custom-theme.scss
@@ -22,6 +22,64 @@
 @include mat-progress-spinner-theme($kbtv-client-theme); // d   
 @include mat-divider-theme($kbtv-client-theme); // d
 @include mat-card-theme($kbtv-client-theme); // d
+@include mat-dialog-theme($kbtv-client-theme); // d
+@include mat-autocomplete-theme($kbtv-client-theme); //
+@include mat-badge-theme($kbtv-client-theme); //
+@include mat-checkbox-theme($kbtv-client-theme); //
+@include mat-form-field-theme($kbtv-client-theme); //
+@include mat-input-theme($kbtv-client-theme); //
+@include mat-menu-theme($kbtv-client-theme); //
+@include mat-radio-theme($kbtv-client-theme);
+@include mat-select-theme($kbtv-client-theme);
+@include mat-bottom-sheet-theme($kbtv-client-theme); // d
+@include mat-chips-theme($kbtv-client-theme); // d
+@include mat-slider-theme($kbtv-client-theme); // d
+
+
+//Fix to keep items in CDK virtual scroll responsive 
+.cdk-virtual-scroll-content-wrapper{
+  width:100%;
+}
+
+.horizontal-chips-container:before, .horizontal-chips-container:after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  width: 20px;
+  height: 100%;
+  z-index:1;
+  pointer-events:none!important;
+}
+
+.horizontal-chips-container:before {
+  box-shadow: 15px 0 7px -12px inset $primary;
+}
+
+.horizontal-chips-container:after {
+  box-shadow: -15px 0 7px -12px inset $primary;
+  right:0;
+}
+
+.horizontal-chips-container{
+  position: relative;
+  width:100%;
+  .horizontal-chips{
+    .mat-chip-list-wrapper {
+      flex-wrap: nowrap;
+      white-space: nowrap;
+      overflow-x:auto!important;
+      overflow-y:hidden;
+      margin: 2px 0 2px 0px;
+      padding-left:2px;
+      .mat-chip{
+        max-width:50%;
+      }
+      .mat-standard-chip{
+        margin:2px;
+      }    
+    }  
+  }  
+}
 
 //Fix for bug on iOs
 .mat-drawer-container {position: unset!important;}
