slight styling changes

--- a/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -33,7 +33,7 @@
       <mat-icon left-side>photo_library</mat-icon>
       Bilder
       <ng-container right-side>
-        <span *ngIf="mission.missionImages?.length">{{ mission.missionImages.length }}</span>
+        <span *ngIf="mission.missionImages?.length">{{ mission.missionImages?.length }}</span>
         <mat-icon>chevron_right</mat-icon>
       </ng-container>
     </app-list-item>
@@ -42,7 +42,7 @@
       <mat-icon left-side>folder</mat-icon>
       Dokumenter
       <ng-container right-side>
-        <span *ngIf="mission.missionDocuments?.length">{{ mission.missionDocuments.length }}</span>
+        <span *ngIf="mission.missionDocuments?.length">{{ mission.missionDocuments?.length }}</span>
         <mat-icon>chevron_right</mat-icon>
       </ng-container>
     </app-list-item>
@@ -51,7 +51,7 @@
       <mat-icon left-side>rate_review</mat-icon>
       Notater
       <ng-container right-side>
-        <span *ngIf="mission.missionNotes?.length">{{ mission.missionNotes.length }}</span>
+        <span *ngIf="mission.missionNotes?.length">{{ mission.missionNotes?.length }}</span>
         <mat-icon>chevron_right</mat-icon>
       </ng-container>
     </app-list-item>
