--- a/src/app/shared/components/detail-top-nav-bar/detail-top-nav-bar.component.html
+++ b/src/app/shared/components/detail-top-nav-bar/detail-top-nav-bar.component.html
@@ -1,7 +1,7 @@
 
-<div class="container primary" *ngIf="config">
+<div class="container" *ngIf="config" [ngClass]="config.imgSrc ? 'bg-black' : 'primary'">
     
-    <div *ngIf="config.imgSrc" class="img-container text-center mr-auto ml-auto ">
+    <div *ngIf="config.imgSrc" class="img-container text-center mr-auto ml-auto">
       <img appImageErrorReloader #img [src]="config.imgSrc" (error)="img.src = '/assets/notfound.png?'" alt="Forsidebilde" />
     </div>
   
@@ -20,6 +20,7 @@
       </span>
   
     </mat-toolbar>
+    
 </div>
 
   
