--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 @import './variables';
 @import './app-animations.scss';
 @import './spacing.scss';
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 //Dev only imports (remove for prod, lazily loaded)
 // @import './lazy-styles/ag-grid.scss';
 // @import './lazy-styles/mat-styles.scss';
