--- a/src/app/modules/selectable-list/selectable-card/selectable-card.component.html
+++ b/src/app/modules/selectable-list/selectable-card/selectable-card.component.html
@@ -5,7 +5,7 @@
 
     </ng-content>
 
-    <div class="overlay" fxLayout="column" fxLayoutAlign="center center"
+    <div class="overlay"
         [style.opacity]="isSelected ? .65:0">
         <mat-icon>{{ selectedIcon }}</mat-icon>
         <span class="mat-body-strong">{{ selectedText }}</span>
