--- a/src/app/modules/selectable-list/selectable-list/selectable-list.component.scss
+++ b/src/app/modules/selectable-list/selectable-list/selectable-list.component.scss
@@ -1,5 +1,3 @@
-@import '../../../../styles/variables';
-
 //Entity -> used in selective list 
 .entity-row {
     display: -ms-flexbox; /* IE10 */
@@ -7,7 +5,7 @@
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
     max-width: 1000px;
-    padding:$gap-size * 0.25px;
+    padding:1px;
   }
   
   /* Create four equal columns that sits next to each other */
