form sheet fix styling remove global dependency

--- a/projects/form-sheet/src/lib/form-sheet-nav-bar/form-sheet-nav-bar.component.html
+++ b/projects/form-sheet/src/lib/form-sheet-nav-bar/form-sheet-nav-bar.component.html
@@ -1,5 +1,5 @@
 <style>
-    mat-toolbar { background: transparent }
+    mat-toolbar { background: transparent; padding:0px }
     .title{
         margin-right:auto;
         overflow: hidden;
